# time-design-backend

./: .gitignore  README.md  app.py  pyproject.toml
docs/: er_diagram.md  openapi.yaml
infrastructure/: todo_stack.py
infrastructure/api/: constract.py
src/time_design_backend/: __init__.py
src/todo_api/: app.py  requirements.txt
