[project]
name = "timedesign-backend"
version = "0.1.0"
description = "timedesign-backend application"
authors = [
    { name = "Shota Onishi" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/time_design_backend"]

[tool.ruff]
line-length = 80
indent-width = 4
